# O2Build

./: .gitignore  Cargo.toml  README.md
.github/workflows/: run_and_test.yml
examples/: Simple.Ingredient  Simple.O2  Simple.oxygen
oxygen/: Cargo.toml
oxygen/src/: grammar.rs  lib.rs
oxygen/src/abi/: mod.rs
oxygen/src/ast/: binary.rs  expression.rs  function.rs  mod.rs  typing.rs
oxygenc/: Cargo.toml
oxygenc/src/: main.rs  opts.rs
oxygenc/src/codegen/: func_def.rs  func_proto.rs  mod.rs
oxygenc/src/codegen/func_codegen/: binary.rs  block.rs  func_call.rs  literals.rs  mod.rs
src/: abi.rs  lib.rs  main.rs  token.rs
src/ast/: binary.rs  comparison.rs  definition.rs  expression.rs  function.rs  mod.rs  statement.rs  typing.rs
src/generator/: func_def.rs  func_proto.rs  mod.rs
src/generator/expr/: binary.rs  block.rs  func_call.rs  literals.rs  mod.rs
src/token/: binary.rs  ident.rs  literals.rs  mod.rs  tokenise.rs
src/tokeniser/: binary.rs  ident.rs  literals.rs  mod.rs
tests/: test_tokeniser.rs
