[package]
name = "OxygenC"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
Oxygen = { path = "../oxygen" }
clap = { version = "3.0.7", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
cranelift = "0.80.0"
cranelift-module = "0.80.0"
cranelift-object = "0.80.0"
target-lexicon = "0.12.2"
