[package]
name = "oxygenc"
version = "0.1.0"
edition = "2021"
publish = false
license-file = "../LICENSE"

[dependencies]
anyhow = "1.0.58"
oxygen = { path = "../oxygen" }
clap = { version = "3.2.15", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
cranelift = "0.86.1"
cranelift-module = "0.86.1"
cranelift-object = "0.86.1"
target-lexicon = "0.12.4"
